tests/compilefail74.out
[1mtests/compilefail74.pas:10:13: [0m[1m[91merror:[0m Function sqrt() requires parameter of real type
    10 | 	writeln(sqrt(r));