tests/compilefail74.pas
program compilefail74(output);
{invalid use of sqrt}


var r:boolean;


begin
	r := true;
	writeln(sqrt(r));
end.
